# iops-benchmark-for-wasm-runtimes

./: .gitignore  Makefile  README.md  iops.c  iops.h  iops.wasm  iops.wat  main.c
use-nodejs/: index.js
use-wasmer/: Cargo.toml
use-wasmer/src/: main.rs
use-wasmtime/: Cargo.toml
use-wasmtime/src/: main.rs
