[package]
name = "use-wasmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.0"
wasmer-wasi = "2.1.0"
wasmer-compiler-singlepass = "*"
wasmer-compiler-cranelift = "*"
wasmer-compiler-llvm = "*"
wasmer-engine-universal = "*"

